--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Sen Li's Homepage
-page-top-title: 叶甲楚
+page-top-title: 叶甲楚吧
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;叶甲楚
+home-subtitle: Sen Li&ensp;|&ensp;叶甲楚吧
 copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
